--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
 	mod history:
 	8/27/21 - created page and changed name
 	9/8/21 - changed stylesheet and JS destinations
+	9/10/21 - added link for Conversions
 
 -->
 <!doctype html>
@@ -28,22 +29,30 @@
 		<h3> Course Work </h3>
 		<hr/> <!-- Draw a horizontal line with formatting defined by css -->
  
-		<ul>  <!-- Beginning of unordered list -->
+		<ul>  <!--list of links to each lab-->
 		
 			<li>  
-				<a href="alert/alert.html">Test File</a>  <!-- link to the Test File To Launch-->
+				<a href="alert/alert.html">Test File</a> 
 			</li>  
 			
 			<li>  
-				<a href="jsHelloWorld/jsHelloWorld.html">JS Hello World</a>  <!-- link to jsHelloWorld lab -->
+				<a href="jsHelloWorld/jsHelloWorld.html">JS Hello World</a> 
 			</li>  
 
 			<li>  
-				<a href="idAndStyle/idAndStyle.html">IDd and Styled</a>  <!-- link to ID and Style lab -->
+				<a href="idAndStyle/idAndStyle.html">IDd and Styled</a> 
 			</li> 
 
 			<li>
-				<a href="multiWrites/multiWrites.html">Multi-Writes</a> <!--link to multi-writes lab-->
+				<a href="multiWrites/multiWrites.html">Multi-Writes</a> 
+			</li>
+
+			<li>
+				<a href="conversions/conversions.html">Conversions</a> 
+			</li>
+
+			<li>
+				<a href="functions/functions.html">Functions</a> 
 			</li>
         
 		</ul>  <!-- End of unordered list -->
