--- a/homepage.html
+++ b/homepage.html
@@ -54,6 +54,10 @@
 			<li>
 				<a href="functions/functions.html">Functions</a> 
 			</li>
+
+			<li>
+				<a href="randomness/randomness.html">randomness</a> 
+			</li>
         
 		</ul>  <!-- End of unordered list -->
 	 
