--- a/homepage.html
+++ b/homepage.html
@@ -56,7 +56,11 @@
 			</li>
 
 			<li>
-				<a href="randomness/randomness.html">randomness</a> 
+				<a href="randomness/randomness.html">Randomness</a> 
+			</li>
+
+			<li>
+				<a href="iffyProgramming/iffyProgramming.html">Iffy Programming</a> 
 			</li>
         
 		</ul>  <!-- End of unordered list -->
