finished iffyProgramming and moreIfs

--- a/homepage.html
+++ b/homepage.html
@@ -8,6 +8,9 @@
 	8/27/21 - created page and changed name
 	9/8/21 - changed stylesheet and JS destinations
 	9/10/21 - added link for Conversions
+	9/14/21 - added link for Functions
+	9/22/21 - added link for Randomness
+	9/29/21 - added links for Iffy Programming and More Ifs
 
 -->
 <!doctype html>
@@ -61,6 +64,10 @@
 
 			<li>
 				<a href="iffyProgramming/iffyProgramming.html">Iffy Programming</a> 
+			</li>
+
+			<li>
+				<a href="moreIfs/moreIfs.html">More Ifs</a>
 			</li>
         
 		</ul>  <!-- End of unordered list -->
