finished loopingThroughArrays, working on strings

--- a/homepage.html
+++ b/homepage.html
@@ -11,6 +11,7 @@
 	9/14/21 - added link for Functions
 	9/22/21 - added link for Randomness
 	9/29/21 - added links for Iffy Programming and More Ifs
+	10/5/21 - added links for Looping Through Arrays and Strings
 
 -->
 <!doctype html>
@@ -68,6 +69,14 @@
 
 			<li>
 				<a href="moreIfs/moreIfs.html">More Ifs</a>
+			</li>
+
+			<li>
+				<a href="loopingThroughArrays/loopingThroughArrays.html">Looping Through Arrays</a>
+			</li>
+
+			<li>
+				<a href="strings/strings.html">Strings</a>
 			</li>
         
 		</ul>  <!-- End of unordered list -->
