--- a/homepage.html
+++ b/homepage.html
@@ -19,9 +19,13 @@
 
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" type = "text/css" href = "css/homepage.css">
-<title>N341 Student Course Page</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type = "text/css" href = "css/homepage.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
+	<title>N341 Student Course Page</title>
 </head>
 
 <body>
