--- a/buttons/buttons.html
+++ b/buttons/buttons.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" type = "text/css" href = "css/homepage.css">
+	<link rel="stylesheet" type ="text/css" href="../css/buttons.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../js/buttons.js"></script>
 
-    <title>Document</title>
+    <title>Buttons</title>
 </head>
 <body>
-    
+   <button type="button" id="event1">Attack Handler</button> 
+   <button type="button" id="event2">Defend Handler</button> 
+   <button type="button" id="listener1">Attack Listener</button> 
+   <button type="button" id="listener2">Defend Listener</button> 
+   <button type="button" id="multiListener">Multi-Listener</button> 
+   <div id="battleCryOutput"></div>
+   <div id="defendOutput"></div>
 </body>
 </html>
