--- a/homepage.html
+++ b/homepage.html
@@ -82,6 +82,10 @@
 			<li>
 				<a href="strings/strings.html">Strings</a>
 			</li>
+
+			<li>
+				<a href="buttons/buttons.html">Buttons</a>
+			</li>
         
 		</ul>  <!-- End of unordered list -->
 	 
