finished with ahoyJQuery

--- a/buttons/buttons.html
+++ b/buttons/buttons.html
@@ -1,3 +1,10 @@
+<!--
+    filename: buttons.html
+    author: Nathan Allen
+    created: 10/13/21
+    purpose: display clickable buttons and text that updates when they are clicked
+    mod history:
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
