--- a/homepage.html
+++ b/homepage.html
@@ -86,6 +86,10 @@
 			<li>
 				<a href="buttons/buttons.html">Buttons</a>
 			</li>
+
+			<li>
+				<a href="ahoyJQuery/ahoyJQuery.html">Ahoy! JQuery</a>
+			</li>
         
 		</ul>  <!-- End of unordered list -->
 	 
