working on pick Me. need comments

--- a/homepage.html
+++ b/homepage.html
@@ -90,6 +90,10 @@
 			<li>
 				<a href="ahoyJQuery/ahoyJQuery.html">Ahoy! JQuery</a>
 			</li>
+
+			<li>
+				<a href="pickMe/pickMe.html">Pick Me!</a>
+			</li>
         
 		</ul>  <!-- End of unordered list -->
 	 
