--- a/homepage.html
+++ b/homepage.html
@@ -12,6 +12,7 @@
 	9/22/21 - added link for Randomness
 	9/29/21 - added links for Iffy Programming and More Ifs
 	10/5/21 - added links for Looping Through Arrays and Strings
+	10/28/21 - added link for PickMe
 
 -->
 <!doctype html>
@@ -70,6 +71,9 @@
 			<li>
 				<a href="iffyProgramming/iffyProgramming.html">Iffy Programming</a> 
 			</li>
+		</ul>
+
+		<ul>
 
 			<li>
 				<a href="moreIfs/moreIfs.html">More Ifs</a>
