--- a/homepage.html
+++ b/homepage.html
@@ -13,6 +13,7 @@
 	9/29/21 - added links for Iffy Programming and More Ifs
 	10/5/21 - added links for Looping Through Arrays and Strings
 	10/28/21 - added link for PickMe
+	11/04/21 - added link for MoversAndShakers
 
 -->
 <!doctype html>
@@ -97,6 +98,10 @@
 
 			<li>
 				<a href="pickMe/pickMe.html">Pick Me!</a>
+			</li>
+
+			<li>
+				<a href="moversAndShakers/moversAndShakers.html">Movers And Shakers</a>
 			</li>
         
 		</ul>  <!-- End of unordered list -->
