--- a/pickMe/pickMe.html
+++ b/pickMe/pickMe.html
@@ -21,6 +21,18 @@
 </head>
 <body>
 
+    <h3>Who should we send on this mission?</h3>
+    <!--buttons for picking crew-->
+    <button id="button1">We all go!!!</button>
+    <button id="button2">Just the officers</button>
+    <button id="button3">Eenie Meenie Miney Moe, you go!</button>
+    <button id="button4">Me and my mate</button>
+    <button id="button5">If your name has an M in it</button>
+    <button id="button6">You there in the back</button>
+    <button id="button7">Every other pirate goes.</button>
+    <button id="button8">Lets take the whole dang ship!!!</button>
+
+    <!--list of crew-->
     <ul>
         <li id="mckraken" class="captain officer smart strong fast">Captain McKraken</li>
         <li id="pete" class="firstMate officer smart strong">First Mate Peteplank</li>
@@ -35,14 +47,6 @@
     </ul>
 
 
-    <h3>Who should we send on this mission?</h3>
-    <button id="button1">We all go!!!</button>
-    <button id="button2">Just the officers</button>
-    <button id="button3">Eenie Meenie Miney Moe, you go!</button>
-    <button id="button4">Me and my mate</button>
-    <button id="button5">If your name has an M in it</button>
-    <button id="button6">You there in the back</button>
-    <button id="button7">Let's take the whole dang ship!!!</button>
 
 </body>
 </html>
