--- a/homepage.html
+++ b/homepage.html
@@ -25,6 +25,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
+
 	<title>N341 Student Course Page</title>
 </head>
 
@@ -89,6 +90,10 @@
 
 			<li>
 				<a href="ahoyJQuery/ahoyJQuery.html">Ahoy! JQuery</a>
+			</li>
+
+			<li>
+				<a href="triggered/triggered.html">Triggered</a>
 			</li>
         
 		</ul>  <!-- End of unordered list -->
