--- a/homepage.html
+++ b/homepage.html
@@ -98,15 +98,15 @@
 			</li>
 
 			<li>
-<<<<<<< HEAD
-				<a href="triggered/triggered.html">Triggered</a>
-=======
 				<a href="pickMe/pickMe.html">Pick Me!</a>
 			</li>
 
 			<li>
 				<a href="moversAndShakers/moversAndShakers.html">Movers And Shakers</a>
->>>>>>> e5e95e5bc4cc65d208ce80dd761227caafac19a6
+			</li>
+
+			<li>
+				<a href="triggered/triggered.html">Movers And Shakers</a>
 			</li>
         
 		</ul>  <!-- End of unordered list -->
