--- a/triggered/triggered.html
+++ b/triggered/triggered.html
@@ -20,6 +20,8 @@
     <title>Triggered</title>
 </head>
 <body>
+    <!--directions on how to interact with program-->
+    <h1>Move mouse over squares to turn them red. Press keys to change color as well(green if mouse is over, blue if mouse is not over).</h1>
 
     
 </body>
