fixed triggered link

--- a/homepage.html
+++ b/homepage.html
@@ -106,7 +106,7 @@
 			</li>
 
 			<li>
-				<a href="triggered/triggered.html">Movers And Shakers</a>
+				<a href="triggered/triggered.html">Triggered</a>
 			</li>
         
 		</ul>  <!-- End of unordered list -->
