working on getting theme working

--- a/homepage.html
+++ b/homepage.html
@@ -26,6 +26,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+	<link href="theme/jquery-ui.css" rel="stylesheet">
 
 
 	<title>N341 Student Course Page</title>
@@ -108,8 +109,15 @@
 			<li>
 				<a href="triggered/triggered.html">Triggered</a>
 			</li>
-        
+
 		</ul>  <!-- End of unordered list -->
+        
+		<ul id="finalProjectUL">
+			<li>
+				<a href="finalProject/finalProject.html">Final Project</a>
+			</li>
+		</ul>
+
 	 
 	</div><!-- end div id="assignments" -->
 </body>
